--- a/client/main.html
+++ b/client/main.html
@@ -1,10 +1,3 @@
-<head>
-    <title>Meteor App</title>
-    <meteor-bundled-css />
-</head>
-
 <body>
-<div id="app"></div>
-<meteor-bundled-js />
+<div id="react-target"></div>
 </body>
-
